@@ -1,3 +1,7 @@
+4/3/14
+  Right click an unfocused desktop in the switcher to move
+   the focused window to that desktop
+
 1/3/14
   Add option in rc.conf to select which desktop to start on
 
